[package]
name = "practical_ex1"
version = "0.1.0"
authors = ["Daniel Kerbel <nmdanny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# logging
log = "0.4"
tracing = "0.1.2"
tracing-error = "0.1.2"
color-spantrace = "0.1.6"
tracing-futures = { version = "0.2.4" }
tracing-subscriber = "0.2"
pretty_env_logger = "0.4"
color-eyre = "0.5.10"

# concurrency/parallelism
tokio = { version = "0.2", features = ["full"] }
futures-retry = "0.5.0"
futures = "0.3"
crossbeam = "0.8"
async-trait = "0.1.42"
tokio-test = "0.3.0"

# util
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
serde_json = "1.0"
clap = "3.0.0-beta.2"
anyhow = "1.0"
thiserror = "1.0.22"
derivative = "2.1.1"
gridiron = "0.8.0"
curve25519-dalek = "3"

# grpc
tonic = "0.3.1"
prost = "0.6"
parking_lot = "0.11.0"

[lib]
name = "dist_lib"
path = "src/lib.rs"

#[[bin]]
#name = "runner"
#path = "src/runner.rs"

[[bin]]
name = "raft"
path = "src/consensus/single_process_runner.rs"

[build-dependencies]
tonic-build = "0.3"