[package]
name = "practical_ex1"
version = "0.1.0"
authors = ["Daniel Kerbel <nmdanny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# logging
log = "0.4"
tracing = "0.1.2"
tracing-error = "0.1.2"
color-spantrace = "0.1.6"
tracing-futures = { version = "0.2.4" }
tracing-subscriber = "0.2"
tracing-appender = "0.1"
tracing-flame = "0.1"
opentelemetry = { version = "0.12", features = ["tokio-support", "serialize"] }
opentelemetry-jaeger = { version = "0.11", features = ["tokio"] }
opentelemetry-otlp = { version = "0.5" }
tracing-opentelemetry = "0.11"
pretty_env_logger = "0.4"
color-eyre = "0.5.10"

# concurrency/parallelism
tokio = { version = "1.1", features = ["full"] }
tokio-stream = "0.1"
futures-retry = "0.5.0"
futures = "0.3"
crossbeam = "0.8"
parking_lot = "0.11"
async-trait = "0.1.42"
rayon = "1.5"

# util
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
serde_json = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0.22"
derivative = "2.1.1"
curve25519-dalek = "3"
sodiumoxide = "0.2.6"
lazy_static = "1.4.0"
chrono = "0.4"
iced = { git = "https://github.com/hecrj/iced", rev = "9f5c2eb0c43daa61b19769322cf3692b29e0ac0f", features = ["tokio"] }
iced_futures = { git = "https://github.com/hecrj/iced", rev = "9f5c2eb0c43daa61b19769322cf3692b29e0ac0f", features = ["tokio"] }
# iced_futures = { version = "0.2"}

# grpc
tonic = { version = "0.4", features = ["default", "tls"] }
prost = "0.7"


[target.'cfg(unix)'.dependencies]
pprof = { version = "0.4.2", features = ["flamegraph", "protobuf"] }

[lib]
name = "dist_lib"
path = "src/lib.rs"

[[bin]]
name = "runner"
path = "src/anonymity/runner.rs"

[[bin]]
name = "raft"
path = "src/consensus/single_process_runner.rs"

[[bin]]
name = "cert_gen"
path = "src/crypto/generator.rs"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
tokio-test = "0.4.2"

[build-dependencies]
tonic-build = "0.4"


 [profile.release] 
 debug = true